--- a/style.css
+++ b/style.css
@@ -47,8 +47,10 @@ body {
 }
 
 header {
-    padding-top: 30px;
-    margin: 30px auto;
+    margin: 10px auto;
+    min-height: 110px;
+    /* padding-top: 30px;
+    margin: 30px auto; */
 
 }
 
@@ -212,6 +214,14 @@ input[type='number']:focus {
     outline: 2px solid rgb(255, 77, 0);
 
 }
+
+
+.error {
+    padding-left: 15px;    
+    font-size: 12px;
+    color: rgb(255, 77, 0);
+    
+    }
 
 /* Result cards */
 
