--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
 }
 
 header {
+    width: auto;
     height: 150px;
     display: flex;
     justify-content: center;
@@ -81,7 +82,7 @@ header {
 
 @media screen and (max-width: 644px) {
     .container {
-height: auto;    }
+    height: auto;    }
   }
 
 .container-calc {
@@ -152,7 +153,7 @@ h1 {
     cursor: pointer;
 }
 
-input[type='number'].tip-custom {
+input[type='tel'].tip-custom {
     width: 116px;
     height: 48px;
 }
@@ -180,7 +181,7 @@ input[type='number'].tip-custom {
     color: var(--grayish-cyan);
 }
 
-input[type='number'] {
+input[type='tel'] {
     width: 100%;
     height: 44px;
     
