--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ input[type='tel'] {
 
     color: var(--very-dark-cyan);
 
-    background-image: url(./images/icon-person.svg));
+    background-image: url(./images/icon-person.svg);
   background-repeat: no-repeat;
   background-position: 2px 3px;
     padding-right: 20px;
